--- a/pages/servicos.css
+++ b/pages/servicos.css
@@ -1,6 +1,7 @@
 main {
     margin: auto;
-    width: 80%;
+    width: 100%;
+    max-width: 1200px;
     padding: 20px;
     text-align: justify;
 }
@@ -44,7 +45,7 @@ h3 {
     align-items: center;
     border: 1px solid black;
     background-color: #4290e485;
-    margin: 50px;
+    padding: 20px 0;
 }
 
 .footer-alter{
