--- a/pages/contatos.css
+++ b/pages/contatos.css
@@ -16,8 +16,8 @@ body {
 header {
   background-color: #fff;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  padding: 15px 0;
   position: sticky;
+  padding: 15px 0;
   top: 0;
   z-index: 1000;
 }
@@ -32,7 +32,7 @@ header {
 }
 
 .logo h1 {
-  font-size: 24px;
+  font-size: 28px;
   margin: 0;
   color: #333;
 }
@@ -69,8 +69,8 @@ nav a:hover, nav a.active {
 .btn-login {
   display: flex;
   align-items: center;
-  background-color: #0056b3;
-  color: white;
+  background-color: #ffffff;
+  color: rgb(45, 45, 45);
   padding: 10px 20px;
   border-radius: 30px;
   text-decoration: none;
@@ -83,7 +83,7 @@ nav a:hover, nav a.active {
 }
 
 .btn-login:hover {
-  background-color: #003d82;
+  background-color: #ffffff;
 }
 
 /* ===== TÍTULO DA PÁGINA ===== */
