--- a/pages/veiculos.css
+++ b/pages/veiculos.css
@@ -37,7 +37,7 @@ nav ul {
 
 nav a {
   text-decoration: none;
-  color: #333;
+  color: #4b4747;
   font-weight: 500;
   font-size: 16px;
   transition: color 0.3s ease;
@@ -121,7 +121,7 @@ border-bottom: 1px solid #eee;
 
 .filters-header h3 {
 margin: 0;
-color: #1a1a1a;
+color: #000000;
 }
 
 .btn-filter-toggle {
