--- a/pages/servicos.css
+++ b/pages/servicos.css
@@ -16,7 +16,7 @@ article {
     box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.2);
 }
 
-img {
+.service-img {
     display: block;
     max-width: 600px;
     padding: 20px 0;
