--- a/pages/styles.css
+++ b/pages/styles.css
@@ -1082,4 +1082,13 @@ footer {
     transform: scale(1.05);
 
 }
+ 
+ .foto-usuario {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-right: 8px;
+    vertical-align: middle;
+ }
   
