--- a/pages/styles.css
+++ b/pages/styles.css
@@ -1225,10 +1225,10 @@ footer {
   background-color: #45a049;
 }
 .btn-home {
-  margin-top: 10px;
+  margin-top: 15px;
   width: 100%;
-  padding: 10px;
-  background-color: #ff0000;
+  padding: 8px;
+  background-color: #771e1e;
   color: #fff;
   border: none;
   border-radius: 5px;
@@ -1237,5 +1237,5 @@ footer {
 }
 
 .btn-home:hover {
-  background-color: #4e0000;
+  background-color: #7e2f2f;
 }
